Refactor MacroConnect and MacroConnector creation Handle MacroConnect index Remove connector commutativity and ConnectedModels Connect StandardBus only with DefaultModel
Signed-off-by: lisrte <laurent.issertial@rte-france.com>