@@ -14,13 +14,12 @@ import com.powsybl.dynawaltz.models.generators.GeneratorSynchronousModel;
 import com.powsybl.dynawaltz.models.utils.BusUtils;
 import com.powsybl.dynawaltz.xml.ParametersXml;
 import com.powsybl.iidm.network.Generator;
-import org.apache.commons.lang3.tuple.Pair;
 
 import javax.xml.stream.XMLStreamException;
 import javax.xml.stream.XMLStreamWriter;
-import java.util.*;
+import java.util.Arrays;
+import java.util.List;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import static com.powsybl.dynawaltz.DynaWaltzParametersDatabase.ParameterType.DOUBLE;
 import static com.powsybl.dynawaltz.DynaWaltzParametersDatabase.ParameterType.INT;
@@ -34,20 +33,17 @@ import static com.powsybl.dynawaltz.xml.DynaWaltzXmlConstants.DYN_URI;
  * dynamic model and one to connect it to the NETWORK model.
  *
  * @author Marcos de Miguel <demiguelm at aia.es>
+ * @author Laurent Issertial <laurent.issertial at rte-france.com>
  */
 public class OmegaRef extends AbstractPureDynamicBlackBoxModel {
 
     public static final String OMEGA_REF_ID = "OMEGA_REF";
     private static final String OMEGA_REF_PARAMETER_SET_ID = "OMEGA_REF";
-    private final Map<GeneratorSynchronousModel, Integer> synchronousGenerators = new LinkedHashMap<>();
-    private final Map<BusModel, List<GeneratorSynchronousModel>> busGeneratorListMap = new LinkedHashMap<>();
+    private final List<GeneratorSynchronousModel> synchronousGenerators;
 
     public OmegaRef(List<GeneratorSynchronousModel> synchronousGenerators) {
         super(OMEGA_REF_ID, OMEGA_REF_PARAMETER_SET_ID);
-        int i = 0;
-        for (GeneratorSynchronousModel synchronousGenerator : synchronousGenerators) {
-            this.synchronousGenerators.put(synchronousGenerator, i++);
-        }
+        this.synchronousGenerators = synchronousGenerators;
     }
 
     public boolean isEmpty() {
@@ -68,12 +64,12 @@ public class OmegaRef extends AbstractPureDynamicBlackBoxModel {
 
         // The dynamic models are declared in the DYD following the order of dynamic models' supplier.
         // The OmegaRef parameters index the weight of each generator according to that declaration order.
-        for (Map.Entry<GeneratorSynchronousModel, Integer> e : synchronousGenerators.entrySet()) {
-            GeneratorSynchronousModel generator = e.getKey();
+        int index = 0;
+        for (GeneratorSynchronousModel generator : synchronousGenerators) {
             double h = parDB.getDouble(generator.getParameterSetId(), "generator_H");
             double snom = parDB.getDouble(generator.getParameterSetId(), "generator_SNom");
-
-            ParametersXml.writeParameter(writer, DOUBLE, "weight_gen_" + e.getValue(), Double.toString(h * snom));
+            ParametersXml.writeParameter(writer, DOUBLE, "weight_gen_" + index, Double.toString(h * snom));
+            index++;
         }
 
         ParametersXml.writeParameter(writer, INT, "nbGen", Long.toString(synchronousGenerators.size()));
@@ -81,65 +77,35 @@ public class OmegaRef extends AbstractPureDynamicBlackBoxModel {
         writer.writeEndElement();
     }
 
-    @Override
-    public List<VarConnection> getVarConnectionsWith(Model connected) {
-        if (connected instanceof GeneratorSynchronousModel) {
-            GeneratorSynchronousModel connectedGeneratorModel = (GeneratorSynchronousModel) connected;
-            return Arrays.asList(
-                    new VarConnection("omega_grp_@INDEX@", connectedGeneratorModel.getOmegaPuVarName()),
-                    new VarConnection("omegaRef_grp_@INDEX@", connectedGeneratorModel.getOmegaRefPuVarName()),
-                    new VarConnection("running_grp_@INDEX@", connectedGeneratorModel.getRunningVarName())
-            );
-        } else if (connected instanceof BusModel) {
-            return List.of(new VarConnection("numcc_node_@INDEX@", ((BusModel) connected).getNumCCVarName()));
-        } else {
-            throw new PowsyblException("OmegaRef can only connect to GeneratorModel and BusModel");
-        }
+    private List<VarConnection> getVarConnectionsWithGeneratorSynchronous(GeneratorSynchronousModel connected) {
+        return Arrays.asList(
+                new VarConnection("omega_grp_@INDEX@", connected.getOmegaPuVarName()),
+                new VarConnection("omegaRef_grp_@INDEX@", connected.getOmegaRefPuVarName()),
+                new VarConnection("running_grp_@INDEX@", connected.getRunningVarName())
+        );
+    }
+
+    private List<VarConnection> getVarConnectionsWithBus(BusModel connected) {
+        return List.of(new VarConnection("numcc_node_@INDEX@", connected.getNumCCVarName()));
     }
 
     @Override
-    public List<Model> getModelsConnectedTo(DynaWaltzContext context) throws PowsyblException {
-        for (GeneratorSynchronousModel g : synchronousGenerators.keySet()) {
-            BusModel bus = getBusAssociatedTo(g, context);
-            busGeneratorListMap.computeIfAbsent(bus, k -> new ArrayList<>()).add(g);
-        }
-        return Stream.concat(synchronousGenerators.keySet().stream(), busGeneratorListMap.keySet().stream())
-                .collect(Collectors.toList());
+    public void createMacroConnections(DynaWaltzContext context) throws PowsyblException {
+        List<String> busStaticIds = synchronousGenerators.stream().map(g -> getBusAssociatedTo(g, context)).collect(Collectors.toList());
+        createMacroConnectionsWithIndex1(synchronousGenerators, this::getVarConnectionsWithGeneratorSynchronous, context);
+        createMacroConnectionsWithIndex1(busStaticIds, BusModel.class, true, this::getVarConnectionsWithBus, context);
     }
 
-    private BusModel getBusAssociatedTo(GeneratorSynchronousModel generatorModel, DynaWaltzContext context) {
+    private String getBusAssociatedTo(GeneratorSynchronousModel generatorModel, DynaWaltzContext context) {
         Generator generator = generatorModel.getStaticId().map(staticId -> context.getNetwork().getGenerator(staticId)).orElse(null);
         if (generator == null) {
             throw new PowsyblException("Generator " + generatorModel.getLib() + " not found in DynaWaltz context. Id : " + generatorModel.getDynamicModelId());
         }
-        return context.getDynamicModelOrDefaultBus(BusUtils.getConnectableBusStaticId(generator));
+        return BusUtils.getConnectableBusStaticId(generator);
     }
 
     @Override
     public String getParFile(DynaWaltzContext context) {
         return context.getSimulationParFile();
-    }
-
-    @Override
-    public void writeMacroConnect(XMLStreamWriter writer, DynaWaltzContext context, MacroConnector macroConnector, Model connected) throws XMLStreamException {
-        if (connected instanceof GeneratorSynchronousModel) {
-            List<Pair<String, String>> attributesConnectFrom = getAttributesConnectFrom((GeneratorSynchronousModel) connected);
-            macroConnector.writeMacroConnect(writer, attributesConnectFrom, connected.getMacroConnectToAttributes());
-        } else if (connected instanceof BusModel) {
-            BusModel bus = (BusModel) connected;
-            for (GeneratorSynchronousModel g : busGeneratorListMap.get(bus)) {
-                List<Pair<String, String>> attributesConnectFrom = getAttributesConnectFrom(g);
-                macroConnector.writeMacroConnect(writer, attributesConnectFrom, bus.getMacroConnectToAttributes());
-            }
-        } else {
-            throw new PowsyblException("OmegaRef can only connect to GeneratorSynchronousModel and BusModel");
-        }
-    }
-
-    private List<Pair<String, String>> getAttributesConnectFrom(GeneratorSynchronousModel generator) {
-        int index = synchronousGenerators.get(generator);
-        return List.of(
-                Pair.of("id1", OMEGA_REF_ID),
-                Pair.of("index1", Integer.toString(index)));
     }
 }
